# Rag-MlFlow

./: api.py  chain.py  flow.py  law_rag.ipynb  load_prompt.py  main.py  mlflow.db  pyproject.toml  rag.py  rag_system.py  ret.py
faiss_db/: index.faiss  index.pkl
prompts/: prompts.json  syllabus_prompts.txt
